# CS-566-Computer-Vision-Project

./: .gitignore  README.md  main.py  observations.pt  occlude_video.py  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: deploy.yml
configs/: default.yaml  em.yaml  extract_data.yaml  generate_observations.yaml  preprocess.yaml
data/: detections.pt  homographies.pt  projections.pt
modules/: __init__.py  batch_em.py  diagnostics.py  em.py  logger.py  math.py  observation_model.py  particle_filter.py  plot.py  transition_model.py  utils.py  view_transformer.py  visualize.py  world_track.py
modules/models/: __init__.py  observation_models.py  transition_models.py
modules/state_estimators/: __init__.py  particle_track_filter.py  particle_track_smoother.py  track_filter.py  track_posteriors.py  track_smoother.py  world_filter.py  world_tracker.py
procedures/: __init__.py  em.py  extract_data.py  generate_observations.py  preprocess.py  procedure.py
src/components/: Welcome.astro
src/layouts/: Layout.astro
src/pages/: index.astro
web/: README.md  astro.config.mjs  package-lock.json  package.json
